--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^5.85.6",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "next": "15.5.2",
